[workspace]

members = [
    "apps/ds",
    "apps/example",
    "apps/hs",
    "apps/to",
    "builds/example_build",
    "builds/ground",
    "builds/rp_pico_example",
    "rfe",
    "tools/decom",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.93", default-features = false }
log = { version = "0.4.22", default-features = false }
hashbrown = { version = "0.15.1", features = ["alloc"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "alloc",
    "derive",
] }
simple_logger = "5.0.0"
rp2040-hal = "0.10.2"
rp2040-pac = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
