[package]
name = "rfe"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = ["dep:mio"]
rp2040 = ["dep:rp2040-hal", "dep:rp2040-pac"]
serde = ["dep:serde"]

[dependencies]
bincode.workspace = true
anyhow.workspace = true
hashbrown.workspace = true
log.workspace = true
mio = { version = "1.0.2", features = ["net", "os-poll"], optional = true }
rp2040-hal = { workspace = true, optional = true }
rp2040-pac = { workspace = true, optional = true }
macros.path = "macros"
serde = { workspace = true, optional = true }
