[package]
name = "hs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/hs.rs"

[features]
default = ["rp2040"]
std = ["dep:sysinfo"]
nix = ["dep:watchdog-device"]
rp2040 = ["dep:rp2040-hal", "dep:rp2040-pac"]

[dependencies]
rfe = { path = "../../rfe" }
anyhow.workspace = true
log.workspace = true
watchdog-device = { version = "0.2.0", optional = true }
sysinfo = { version = "0.32.0", default-features = false, optional = true, features = [
    "component",
    "disk",
    "system",
] }
rp2040-hal = { workspace = true, optional = true }
rp2040-pac = { workspace = true, optional = true }
