[package]
name = "rp_pico_example"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git" }
rfe = { path = "../../rfe", default-features = false, features = ["rp2040"] }
to = { path = "../../apps/to", default-features = false }
hs = { path = "../../apps/hs", default-features = false, features = ["rp2040"] }
anyhow.workspace = true
anyhow.default_features = false
embedded-alloc = "0.6.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", default-features = false, features = [
    "rp2040",
    "log",
] }
log.workspace = true
static_cell = "2.1.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
rtic = { version = "2.1.2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["rp2040"] }
rp-pico = { version = "0.9.0", default-features = false, features = [
    "rt",
    "critical-section-impl",
    "disable-intrinsics",
] }
panic-halt = "1.0.0"
hashbrown.workspace = true

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
